wordPress/maria-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: wordpress
    role: database
  name: maria-pod
spec:
  containers:
  - image: mariadb:10
    name: maria
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 3306
