wordPress/wp-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: wordpress
    role: website
  name: wp-pod
spec:
  containers:
  - image: wordpress:5
    name: wp-pod
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
