wordPress/8-wp-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
spec:
  ingressClassName: wp-ink
  rules:
  - host: wp.test
    http:
      paths:
      - path: /        
        pathType: Prefix
        backend:
          service:
            name: wp-svc
            port:
              number: 80
